[#170] Remove dependency from Squalix to JDBC driver JAR